# Recordatorio

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  update.json
src/: App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/nsis/: installer.nsh
src-tauri/src/: commands.rs  date_parser.rs  db.rs  lib.rs  main.rs  notifications.rs  scheduler.rs  shortcuts.rs  tray.rs  whisper.rs
src/components/: Layout.tsx  ModelDownloader.tsx  ReminderCard.tsx  ShortcutEditor.tsx  VoiceRecorder.tsx
src/hooks/: useShortcuts.ts  useTranscription.ts
src/pages/: ConfirmReminder.tsx  CreateReminder.tsx  Dashboard.tsx  History.tsx  Settings.tsx
src/services/: audioService.ts  notificationService.ts  reminderService.ts  settingsService.ts  shortcutService.ts  transcriptionService.ts
src/store/: appStore.ts
src/types/: reminder.ts
