[package]
name = "recordatorio"
version = "0.1.0"
description = "Asistente personal de recordatorios por voz"
authors = ["you"]
edition = "2021"

[lib]
name = "recordatorio_lib"
crate-type = ["staticlib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-updater = "2"
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
tiberius = "0.12"
dotenvy = "0.15"
whisper-rs = "0.16.0"
hound = "3.5.0"
reqwest = { version = "0.12", default-features = false, features = ["native-tls", "blocking"] }
tauri-plugin-process = "2.3.1"
